<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:padding="8dp">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textSize="50dp"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >


        <TextView
            android:paddingTop="10dp"
            android:hint="@string/email_hint"
            android:id="@+id/welcome_email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textAlignment="center"
            />

        <TextView
            android:id="@+id/welcome_password_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:paddingTop="10dp"
            android:textAlignment="center"
            android:textSize="30dp" />


    </LinearLayout>



</LinearLayout>